--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -834,19 +834,19 @@
         <version>1.9.4</version>
       </dependency>
       <dependency>
-        <groupId>commons-digester</groupId>
-        <artifactId>commons-digester</artifactId>
-        <version>2.1</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-digester3</artifactId>
+        <version>3.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.6</version>
+        <version>3.9</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
-        <version>1.1</version>
+        <version>1.8</version>
       </dependency>
       <dependency>
         <groupId>commons-fileupload</groupId>
@@ -856,7 +856,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-math3</artifactId>
-        <version>3.4.1</version>
+        <version>3.6.1</version>
       </dependency>
       <dependency>
         <groupId>commons-validator</groupId>
@@ -877,7 +877,7 @@
       <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>1.11</version>
+        <version>1.13</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -887,7 +887,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-email</artifactId>
-        <version>1.3.3</version>
+        <version>1.5</version>
       </dependency>
       <dependency>
         <groupId>commons-logging</groupId>
@@ -1466,9 +1466,9 @@
   <properties>
     <rootDir></rootDir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.version>5.1.9.RELEASE</spring.version>
-    <spring-security.version>5.1.6.RELEASE</spring-security.version>
-    <spring-security-oauth2.version>2.3.6.RELEASE</spring-security-oauth2.version>
+    <spring.version>5.2.0.RELEASE</spring.version>
+    <spring-security.version>5.2.0.RELEASE</spring-security.version>
+    <spring-security-oauth2.version>2.3.7.RELEASE</spring-security-oauth2.version>
     <spring-session-data-redis.version>1.3.5.RELEASE</spring-session-data-redis.version>
     <lettuce.version>4.5.0.Final</lettuce.version>
     <spring-data-redis.version>1.8.22.RELEASE</spring-data-redis.version>
@@ -1481,7 +1481,7 @@
     <javassist.version>3.20.0-GA</javassist.version>
     <!-- unit test dependencies-->
     <powermock.version>2.0.0</powermock.version>
-    <jackson.version>2.9.8</jackson.version>
+    <jackson.version>2.10.0</jackson.version>
     <slf4j.version>1.7.5</slf4j.version>
     <geotools.version>18.0</geotools.version>
     <jasperreports.version>6.3.1</jasperreports.version>
