fix: removed timeout

--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     volumes:
     - ./config/dhis2_home/dhis.conf:/DHIS2_home/dhis.conf
     environment:
-      - WAIT_FOR_DB_CONTAINER=db:5432
+      - WAIT_FOR_DB_CONTAINER=db:5432 -t 0
     depends_on:
     - db
     - redis
