--- a/dhis-2/dhis-api/pom.xml
+++ b/dhis-2/dhis-api/pom.xml
@@ -96,13 +96,16 @@
       <artifactId>hibernate-validator</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml</groupId>
+      <artifactId>classmate</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-spatial</artifactId>
     </dependency>
     <dependency>
       <groupId>com.bedatadriven</groupId>
       <artifactId>jackson-datatype-jts</artifactId>
-      <version>2.4</version>
     </dependency>
     <dependency>
       <groupId>org.geotools</groupId>
