--- a/dhis-2/dhis-web/pom.xml
+++ b/dhis-2/dhis-web/pom.xml
@@ -35,6 +35,7 @@
           <plugin>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
+            <version>${maven-jetty-plugin.version}</version>
             <configuration>
               <scanIntervalSeconds>0</scanIntervalSeconds>
             </configuration>
@@ -73,9 +74,42 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-maven2-plugin</artifactId>
+        <version>1.7.7</version>
+        <configuration>
+          <container>
+            <containerId>tomcat8x</containerId>
+            <artifactInstaller>
+              <groupId>org.apache.tomcat</groupId>
+              <artifactId>tomcat</artifactId>
+              <version>${tomcat.version}</version>
+            </artifactInstaller>
+          </container>
+          <configuration>
+            <type>standalone</type>
+            <home>${project.build.directory}/apache-tomcat-${tomcat.version}</home>
+            <properties>
+              <cargo.servlet.port>8080</cargo.servlet.port>
+              <cargo.logging>low</cargo.logging>
+            </properties>
+          </configuration>
+          <deployables>
+            <deployable>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>${project.artifactId}</artifactId>
+              <type>war</type>
+              <properties>
+                <context>/</context>
+              </properties>
+            </deployable>
+          </deployables>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.3.13.v20161014</version>
+        <version>${maven-jetty-plugin.version}</version>
         <configuration>
           <systemProperties>
             <systemProperty>
@@ -135,8 +169,12 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
   <properties>
     <rootDir>../</rootDir>
     <useWarCompression>true</useWarCompression>
+    <maven-jetty-plugin.version>9.4.21.v20190926</maven-jetty-plugin.version>
+    <tomcat.version>8.5.47</tomcat.version>
   </properties>
+
 </project>
