--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -662,8 +662,8 @@
         <version>${spring-session-data-redis.version}</version>
       </dependency>
       <dependency>
-        <groupId>biz.paluch.redis</groupId>
-        <artifactId>lettuce</artifactId>
+        <groupId>io.lettuce</groupId>
+        <artifactId>lettuce-core</artifactId>
         <version>${lettuce.version}</version>
         <exclusions>
           <exclusion>
@@ -1464,9 +1464,9 @@
     <spring.version>5.2.0.RELEASE</spring.version>
     <spring-security.version>5.2.0.RELEASE</spring-security.version>
     <spring-security-oauth2.version>2.3.7.RELEASE</spring-security-oauth2.version>
-    <spring-session-data-redis.version>1.3.5.RELEASE</spring-session-data-redis.version>
-    <lettuce.version>4.5.0.Final</lettuce.version>
-    <spring-data-redis.version>1.8.22.RELEASE</spring-data-redis.version>
+    <spring-session-data-redis.version>2.2.0.RELEASE</spring-session-data-redis.version>
+    <lettuce.version>5.2.0.RELEASE</lettuce.version>
+    <spring-data-redis.version>2.2.0.RELEASE</spring-data-redis.version>
     <struts.version>2.5.20</struts.version>
     <hibernate.version>5.2.17.Final</hibernate.version>
     <hibernate-validator.version>5.0.3.Final</hibernate-validator.version>
