--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -1057,7 +1057,7 @@
       <dependency>
         <groupId>org.jfree</groupId>
         <artifactId>jfreechart</artifactId>
-        <version>1.0.19</version>
+        <version>1.5.0</version>
         <exclusions>
           <exclusion>
             <groupId>gnujaxp</groupId>
@@ -1077,11 +1077,6 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>net.sourceforge.jexcelapi</groupId>
-        <artifactId>jxl</artifactId>
-        <version>2.6.12</version>
-      </dependency>
-      <dependency>
         <groupId>org.htmlparser</groupId>
         <artifactId>htmlparser</artifactId>
         <version>2.1</version>
@@ -1091,12 +1086,17 @@
         <artifactId>htmllexer</artifactId>
         <version>2.1</version>
       </dependency>
+      <dependency>
+        <groupId>net.sourceforge.jexcelapi</groupId>
+        <artifactId>jxl</artifactId>
+        <version>2.6.12</version>
+      </dependency>
 
       <!-- GIS -->
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-transcoder</artifactId>
-        <version>1.7</version>
+        <version>1.11</version>
         <exclusions>
           <exclusion>
             <groupId>xalan</groupId>
@@ -1107,7 +1107,12 @@
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-codec</artifactId>
-        <version>1.7</version>
+        <version>1.11</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>fop</artifactId>
+        <version>2.3</version>
       </dependency>
 
       <!-- Jackson JSON Mapper -->
