--- a/dhis-2/dhis-services/dhis-service-core/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-core/pom.xml
@@ -177,8 +177,8 @@
       <artifactId>commons-collections</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.github.eHealthAfrica</groupId>
-      <artifactId>dhis2-sms-compression</artifactId>
+      <groupId>com.github.dhis2</groupId>
+      <artifactId>sms-compression</artifactId>
       <version>0.1.7</version>
     </dependency>
 
