--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_DB: dhis2
       POSTGRES_PASSOWRD: dhis
 
-  e2e-test-web:
+  web:
     image: "${IMAGE_NAME}"
     volumes:
     - ./config/dhis2_home/dhis.conf:/DHIS2_home/dhis.conf
