--- a/.restyled.yaml
+++ b/.restyled.yaml
@@ -179,4 +179,4 @@ restylers_version: "20191012"
 #
 restylers:
   - jdt:
-      arguments: ["-f dhis-2/pom.xml"]
+      arguments: ["-f /code/dhis-2/pom.xml"]
