--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -20,6 +20,7 @@ log4j.appender.file.layout.ConversionPattern = * %-5p %d{ISO8601} %m (%F [%t])%n
 log4j.logger.org.hisp.dhis = INFO
 log4j.logger.org.hisp.dhis.webapi.mvc = WARN
 log4j.logger.org.hisp.dhis.programrule.engine = WARN
+log4j.logger.org.hibernate=ERROR
 log4j.logger.org.hibernate.cache.ehcache.internal.strategy.AbstractReadWriteEhcacheAccessStrategy = ERROR
 log4j.logger.org.hibernate.cache.ehcache.AbstractEhcacheRegionFactory = ERROR
 log4j.logger.org.hibernate.engine.internal.StatefulPersistenceContext = ERROR
